[tool.poetry]
name = "catapi"
version = "0.1.0"
description = ""
authors = ["fatmaann <sol1222183@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.0"
aiosqlite = "^0.20.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
